--- a/platform/build.gradle
+++ b/platform/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
   constraints {
     api project(':standalone')
+    api project(':core')
     api project(':server-json-rpc')
     api project(':storage-rocksdb')
     api project(':execution-history-network')
