--- a/build.gradle
+++ b/build.gradle
@@ -136,6 +136,7 @@ configure(allprojects - project(':platform')) {
   test {
     useJUnitPlatform {}
     finalizedBy jacocoTestReport // report is always generated after tests run
+    maxParallelForks = 1
   }
 }
 
