--- a/besu-plugin/gradle/dependency-management.gradle
+++ b/besu-plugin/gradle/dependency-management.gradle
@@ -1,5 +1,12 @@
 repositories {
   maven {
+    url "https://artifacts.consensys.net/public/linea-besu/maven/"
+    content {
+      includeGroupByRegex('io\\.consensys\\..*')
+      includeGroupByRegex('org\\.hyperledger\\..*')
+    }
+  }
+  maven {
     url 'https://hyperledger.jfrog.io/hyperledger/besu-maven'
     content { includeGroupByRegex('org\\.hyperledger\\..*') }
   }
@@ -10,12 +17,10 @@ repositories {
     }
   }
   maven {
-    url "https://dl.cloudsmith.io/public/libp2p/jvm-libp2p/maven/"
-    content { includeGroupByRegex('io\\.libp2p($|\\..*)') }
-  }
-  maven {
-    url "https://hyperledger.jfrog.io/artifactory/besu-maven/"
-    content { includeGroupByRegex('org\\.hyperledger\\.besu($|\\..*)') }
+    url "https://artifacts.consensys.net/public/linea-arithmetization/maven/"
+    content {
+      includeGroupByRegex('net\\.consensys\\.linea\\..*?')
+    }
   }
   mavenCentral()
   mavenLocal()
