--- a/besu-plugin/gradle/build-aliases.gradle
+++ b/besu-plugin/gradle/build-aliases.gradle
@@ -1,10 +1,10 @@
-defaultTasks 'build', 'checkLicense', 'javadoc', 'artifacts'
+defaultTasks 'build', 'javadoc', 'artifacts'
 
 def buildAliases = [
         'dev': [
                 'spotlessApply',
-                'build',
-                'checkLicense'
+                'build'//,
+               // 'checkLicense'
         ],
         'artifacts' : [
                 'jar',
