updating docker with options

--- a/besu-plugin/docker/Dockerfile
+++ b/besu-plugin/docker/Dockerfile
@@ -1,7 +1,9 @@
-FROM hyperledger/besu:latest
+FROM hyperledger/besu:25.2.1
 COPY --chown=besu:besu core/build/libs/*.jar  /opt/besu/plugins/
 
-EXPOSE 30303 8545 8551 8546 8547 8888 9545
+EXPOSE 30303 8545 8551 8546 8547 8888 9545 8008 5051 9090 9000/udp 9000
+
+ENV HOST_IP=127.0.0.1
 
 ENV BESU_LOGGING=INFO \
     BESU_NETWORK=HOLESKY \
@@ -10,6 +12,5 @@ ENV BESU_LOGGING=INFO \
     BESU_METRICS_ENABLED=true \
     BESU_DATA_PATH=/opt/besu/data
 
-ENTRYPOINT ["besu", "--rpc-http-enabled", "--rpc-http-host=0.0.0.0", "--metrics-host=0.0.0.0",  "--rpc-http-api=ADMIN,ETH,SAMBA"]
-
-
+ENTRYPOINT besu --rpc-http-enabled --rpc-http-api=ADMIN,ETH,SAMBA --plugin-samba-host=$HOST_IP --rpc-http-host=0.0.0.0
+#"--logging=DEBUG"
