--- a/besu-plugin/gradle/dependency-management.gradle
+++ b/besu-plugin/gradle/dependency-management.gradle
@@ -45,7 +45,7 @@ dependencyManagement {
     // ToDo: remove when fixed in Besu, force version to avoid conflict with previous version
     dependency 'org.apache.logging.log4j:log4j-api:2.24.1'
     dependency 'org.apache.logging.log4j:log4j-core:2.24.1'
-
+    dependency 'tech.pegasys.discovery:discovery:25.4.0'
     dependency 'org.wiremock:wiremock:3.12.0'
   }
 }
@@ -66,6 +66,8 @@ dependencyManagement {
     // ToDo: remove when fixed in Besu, force version to avoid conflict with previous version
     dependency 'org.apache.logging.log4j:log4j-api:2.24.1'
     dependency 'org.apache.logging.log4j:log4j-core:2.24.1'
+    dependency 'tech.pegasys.discovery:discovery:25.4.0'
+
 
   }
 }
