--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -74,4 +74,4 @@ jackson-datatype-jdk8 = { module = "com.fasterxml.jackson.datatype:jackson-datat
 jvm-libp2p = { module = "io.libp2p:jvm-libp2p", version.ref = "libp2p"}
 google-guava = { module = "com.google.guava:guava", version.ref = "guava"}
 slf4j-api = { module = "org.slf4j:slf4j-api", version.ref = "slf4j-api"}
-
+log4j-slf4j2-impl = { module = "org.apache.logging.log4j:log4j-slf4j2-impl", version.ref = "log4j" }
