--- a/core/build.gradle
+++ b/core/build.gradle
@@ -17,6 +17,9 @@ jar {
 
 dependencies {
   implementation libs.slf4j.api
+  implementation libs.apache.logging.log4j.api
+  implementation libs.apache.logging.log4j.core
+
   implementation libs.tuweni.bytes
   implementation libs.tuweni.crypto
   implementation libs.tuweni.rlp
