--- a/besu-plugin/docker/Dockerfile
+++ b/besu-plugin/docker/Dockerfile
@@ -1,10 +1,11 @@
-FROM meldsun/besu:discovery
-#FROM meldsun/besu:discovery-arm64
+#FROM meldsun/besu:discovery
+FROM meldsun/besu:discovery-arm64
 COPY --chown=besu:besu core/build/libs/*.jar  /opt/besu/plugins/
 
 EXPOSE 30303 8545 8551 8546 8547 8888 9545 8008 5051 9090 9000/udp 9000
 
 ENV HOST_IP=127.0.0.1
+ENV LOG_LEVEL=INFO
 
 ENV BESU_LOGGING=INFO \
     BESU_NETWORK=HOLESKY \
@@ -13,5 +14,5 @@ ENV BESU_LOGGING=INFO \
     BESU_METRICS_ENABLED=true \
     BESU_DATA_PATH=/opt/besu/data
 
-ENTRYPOINT besu --rpc-http-enabled --rpc-http-api=ADMIN,ETH,SAMBA --plugin-samba-host=$HOST_IP --rpc-http-host=0.0.0.0
+ENTRYPOINT besu --rpc-http-enabled --rpc-http-api=ADMIN,ETH,SAMBA --plugin-samba-host=$HOST_IP --rpc-http-host=0.0.0.0  --plugin-samba-logging=$LOG_LEVEL
 #"--logging=DEBUG"
