delete gradle files and merge them on a single file

--- a/buildscripts/buildDocker.gradle
+++ b/buildscripts/buildDocker.gradle
@@ -71,3 +71,24 @@ tasks.register('runContainer') {
         }
     }
 }
+
+distTar {
+    dependsOn  untunedStartScripts
+    println "Executing task: ${name}"
+    doFirst {
+        delete fileTree(dir: 'build/distributions', include: '*.tar.gz')
+    }
+    compression = Compression.GZIP
+    setVersion(archiveBuildVersion)
+    archiveExtension = 'tar.gz'
+}
+
+distZip {
+    dependsOn untunedStartScripts
+    println "Executing task: ${name}"
+    doFirst {
+        delete fileTree(dir: 'build/distributions', include: '*.zip')
+    }
+    setVersion(archiveBuildVersion)
+    setVersion(archiveBuildVersion)
+}
