--- a/buildSrc/src/main/groovy/samba.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/samba.java-common-conventions.gradle
@@ -17,13 +17,19 @@ dependencies {
     constraints {
         implementation 'org.apache.commons:commons-text:1.10.0'
     }
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+
+    implementation libs.slf4j.api
+    implementation libs.google.guava
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     compileOnly libs.projectlombok
     annotationProcessor libs.projectlombok
     testCompileOnly libs.projectlombok
     testAnnotationProcessor libs.projectlombok
+
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.11.2'
     testImplementation libs.junit.jupiter.api
     testImplementation libs.assertj.core
     testImplementation libs.mockito.core
