--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,35 +1,35 @@
 [versions]
 tuweni = "2.3.1"
-log4j= "2.24.3"
+#log4j= "2.24.3"
 vertex= "4.5.9"
 besuInternal = "25.2.1"
-besuEvm = "25.2.1"
+#besuEvm = "25.2.1"
 besuCrypto = "23.1.3"
 tekuInternal =  "24.8.0"
-picocli = "4.6.1"
-netty = "4.1.115.Final"
+#picocli = "4.6.1"
+#netty = "4.1.115.Final"
 discovery = "25.4.0"
-oshi = "6.6.2"
-assertj = "3.26.0"
+#oshi = "6.6.2"
+#assertj = "3.26.0"
 mockito = "5.14.2"
-lombok = "1.18.34"
-jupiter = "5.8.1"
-rocksdbjni = "8.3.2"
-prometheus = "0.16.0"
-jackson = "2.17.2"
+#lombok = "1.18.34"
+#jupiter = "5.8.1"
+#rocksdbjni = "8.3.2"
+#prometheus = "0.16.0"
+#jackson = "2.17.2"
 libp2p = "1.2.1-RELEASE"
 guava = "33.3.1-jre"
-slf4j-api = "2.0.16"
+#slf4j-api = "2.0.16"
 lang3 = "3.14.0"
 
 [libraries]
-tuweni-bytes = { module = "org.apache.tuweni:tuweni-bytes", version.ref = "tuweni"}
+tuweni-bytes = { module = "org.apache.tuweni:tuweni-bytes" , version.ref = "tuweni"}
 tuweni-crypto = { module = "org.apache.tuweni:tuweni-crypto", version.ref = "tuweni"}
 tuweni-rlp = { module = "org.apache.tuweni:tuweni-rlp", version.ref = "tuweni"}
 tuweni-ssz = { module = "org.apache.tuweni:tuweni-ssz", version.ref = "tuweni"}
 
-apache-logging-log4j-api = { module = "org.apache.logging.log4j:log4j-api", version.ref = "log4j"}
-apache-logging-log4j-core = { module = "org.apache.logging.log4j:log4j-core", version.ref = "log4j"}
+apache-logging-log4j-api = { module = "org.apache.logging.log4j:log4j-api"}#, version.ref = "log4j"}
+apache-logging-log4j-core = { module = "org.apache.logging.log4j:log4j-core"}#, version.ref = "log4j"}
 
 apache-commons-lang3 = { module = "org.apache.commons:commons-lang3", version.ref = "lang3"}
 
@@ -37,12 +37,12 @@ vertx-core= { module = "io.vertx:vertx-core", version.ref = "vertex"}
 vertx-web= { module = "io.vertx:vertx-web", version.ref = "vertex"}
 
 besu-internal-metrics-core= { module = "org.hyperledger.besu.internal:metrics-core", version.ref = "besuInternal"}
-besu-internal-core = { module = "org.hyperledger.besu.internal:core", version.ref = "besuInternal"}
-besu-internal-trie = { module = "org.hyperledger.besu.internal:trie", version.ref = "besuInternal"}
-besu-internal-config = { module = "org.hyperledger.besu.internal:config", version.ref = "besuInternal"}
-besu-internal-rlp = { module = "org.hyperledger.besu.internal:rlp", version.ref = "besuInternal"}
+besu-internal-core = { module = "org.hyperledger.besu.internal:core"}#, version.ref = "besuInternal"}
+besu-internal-trie = { module = "org.hyperledger.besu.internal:trie"}#, version.ref = "besuInternal"}
+besu-internal-config = { module = "org.hyperledger.besu.internal:config"}#, version.ref = "besuInternal"}
+besu-internal-rlp = { module = "org.hyperledger.besu.internal:rlp"}#, version.ref = "besuInternal"}
 besu-internal-plugin-api = { module = "org.hyperledger.besu:plugin-api", version.ref = "besuInternal"}
-besu-evm = { module = "org.hyperledger.besu:evm", version.ref = "besuEvm" }
+besu-evm = { module = "org.hyperledger.besu:evm"}#, version.ref = "besuEvm" }
 besu-internal-crypto = { module = "org.hyperledger.besu.internal:crypto", version.ref = "besuCrypto" }
 
 teku-internal-infrastructure-events = { module = "tech.pegasys.teku.internal:infrastructure-events", version.ref = "tekuInternal"}
@@ -55,24 +55,24 @@ teku-internal-unsigned = { module = "tech.pegasys.teku.internal:unsigned", versi
 teku-internal-http = { module = "tech.pegasys.teku.internal:http", version.ref = "tekuInternal"}
 teku-internal-json = { module = "tech.pegasys.teku.internal:json", version.ref = "tekuInternal"}
 
-picocli = { module = "info.picocli:picocli", version.ref = "picocli"}
-netty-all = { module = "io.netty:netty-all", version.ref = "netty"}
+picocli = { module = "info.picocli:picocli"}#, version.ref = "picocli"}
 discovery = { module = "tech.pegasys.discovery:discovery", version.ref = "discovery"}
-oshi-core = { module = "com.github.oshi:oshi-core", version.ref = "oshi"}
-assertj-core = { module = "org.assertj:assertj-core", version.ref = "assertj"}
-mockito-core= { module = "org.mockito:mockito-core", version.ref = "mockito"}
-mockito-inline= { module = "org.mockito:mockito-inline", version.ref = "mockito"}
+oshi-core = { module = "com.github.oshi:oshi-core"}#, version.ref = "oshi"}
+assertj-core = { module = "org.assertj:assertj-core"}#, version.ref = "assertj"}
+mockito-core= { module = "org.mockito:mockito-core"}#, version.ref = "mockito"}
+mockito-inline= { module = "org.mockito:mockito-inline"}#, version.ref = "mockito"}
 
-projectlombok= { module = "org.projectlombok:lombok", version.ref = "lombok"}
+projectlombok= { module = "org.projectlombok:lombok"}#, version.ref = "lombok"}
 
-junit-jupiter-api= { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "jupiter"}
-junit-jupiter-engine= { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "jupiter"}
 
-rocksdbjni = { module = "org.rocksdb:rocksdbjni", version.ref = "rocksdbjni"}
-prometheus-simpleclient= { module = "io.prometheus:simpleclient", version.ref = "prometheus"}
-jackson-dataformat-yaml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml", version.ref = "jackson"}
-jackson-datatype-jdk8 = { module = "com.fasterxml.jackson.datatype:jackson-datatype-jdk8", version.ref = "jackson"}
+junit-jupiter-api= { module = "org.junit.jupiter:junit-jupiter-api"}#, version.ref = "jupiter"}
+junit-jupiter-engine= { module = "org.junit.jupiter:junit-jupiter-engine"}#, version.ref = "jupiter"}
+
+rocksdbjni = { module = "org.rocksdb:rocksdbjni"}#, version.ref = "rocksdbjni"}
+prometheus-simpleclient= { module = "io.prometheus:simpleclient"}#, version.ref = "prometheus"}
+jackson-dataformat-yaml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml"}#, version.ref = "jackson"}
+jackson-datatype-jdk8 = { module = "com.fasterxml.jackson.datatype:jackson-datatype-jdk8"}#, version.ref = "jackson"}
 jvm-libp2p = { module = "io.libp2p:jvm-libp2p", version.ref = "libp2p"}
 google-guava = { module = "com.google.guava:guava", version.ref = "guava"}
-slf4j-api = { module = "org.slf4j:slf4j-api", version.ref = "slf4j-api"}
-log4j-slf4j2-impl = { module = "org.apache.logging.log4j:log4j-slf4j2-impl", version.ref = "log4j" }
+slf4j-api = { module = "org.slf4j:slf4j-api"}#, version.ref = "slf4j-api"}
+log4j-slf4j2-impl = { module = "org.apache.logging.log4j:log4j-slf4j2-impl"}#, version.ref = "log4j" }
